saving 2025-06-15 root modification

--- a/requirements/Dockerfile
+++ b/requirements/Dockerfile
@@ -16,7 +16,7 @@ COPY ./project/templates ./templates
 
 
 # seed DB in the image (optional if you always bind-mount)
-COPY ./project/database ./database
+# COPY ./project/database ./database
 
 EXPOSE 8080
 
