saving 2025-06-15 paginition limitition

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,6 @@ services:
     volumes:
       - ./requirements/project/database:/project/database
       - ./requirements/project/logs:/project/logs
+      - ./requirements/project/static:/project/static
+      - ./requirements/project/templates:/project/templates
 
